♻️ Refactor :getNotifications 서비스 수정